import 'package:get/get.dart';

class AESIVCtr extends GetxController {}
