import 'dart:io';

class SelectFileReturn {
  File? file;
  String? extension;
  SelectFileReturn({this.file, this.extension});
}
